2007-08-14  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Core.ProgressMonitoring/ConsoleProgressMonitor.cs
	(ReportError): Show exception also in the emitted message.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.AddIns/IconCodon.cs: Moved to MD.Projects.Gui.
	* MonoDevelop.Core.Execution/ProcessService.cs, Makefile.am,
	  MonoDevelop.Core.addin.xml, MonoDevelop.Core.mdp,
	  MonoDevelop.Core/Runtime.cs, MonoDevelop.Core/ServiceManager.cs,
	  MonoDevelop.Core/FileService.cs: Reorganized the extension point
	  hierarchy. Embedded all add-in manifests as resources.

2007-08-07  Ankit Jain  <jankit@novell.com>

	* StringParserService.cs (Replace): Update to use TryGetValue with
	Dictionary objects, indexer throws for non-existant keys.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core/DefaultLoggingService.cs: Added some null checks.

2007-07-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs: Set the 'done' flag
	  before exiting WaitForOutput. It fixes a race that was the cause of
	  bug #82128.

2007-07-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.mdp: Updated.
	* MonoDevelop.Core/Runtime.cs: Use a local add-in registry when running
	  MD from the build directory.

2007-07-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/ProcessHostController.cs,
	  MonoDevelop.Core/Runtime.cs: Use the logging service instead of the
	  console.

2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Execution/AddinDependencyAttribute.cs: Set the
	  correct namespace.

2007-07-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Properties/CharacterEncodings.cs,
	  MonoDevelop.Core/StringParserService.cs: Removed some commented out
	  code.

2007-07-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Core.Execution/ProcessService.cs,
	  MonoDevelop.Core.ProgressMonitoring/ProgressTracker.cs,